components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__plan_json_defaults.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: "serde_json::to_string_pretty(&built.plan).unwrap()"
---
{
  "created": "[TIMESTAMP]",
  "pharos_version": "test",
  "model": "1001.mod",
  "out_dir": "scm/1001",
  "candidates": [
    {
      "name": "WT_CL",
      "theta": 4,
      "kind": "continuous",
      "initial": 0.1,
      "fixed": 0.0
    },
    {
      "name": "CRCL_CL",
      "theta": 5,
      "kind": "continuous",
      "initial": 0.1,
      "fixed": 0.0
    },
    {
      "name": "WT_V",
      "theta": 6,
      "kind": "continuous",
      "initial": 0.1,
      "fixed": 0.0
    }
  ],
  "options": {
    "direction": [
      "forward",
      "backward"
    ],
    "forward_alpha": 0.05,
    "backward_alpha": 0.001,
    "num_rounds": null,
    "max_retries": 3,
    "cov_step": false,
    "final_cov_step": true,
    "forward_final_cov_step": true
  }
}
