components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__plan_text_backward_only.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: text
---
<scm plan> [TMP]/scm/1001/plan.json
model      : [TMP]/1001.mod
out dir    : [TMP]/scm/1001
direction  : backward
backward   : alpha 0.001
on failure : retry up to 3x from the previous attempt's estimates
cov step   : off
final fit  : re-fit the final model with the cov step on
candidates :
  name         theta      initial  FIXED
  WT_CL        THETA(4)       0.1      0
  CRCL_CL      THETA(5)       0.1      0
  WT_V         THETA(6)       0.1      0
             (initial: the effect's initial estimate the first time it is tested; FIXED: what it is fixed at when held out)
max models : 7 (incl. reference fit, excl. retries)
warning: cov_step is off: the initial model's $COVARIANCE record will be removed from the round models
