components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__plan_text_bounded.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: text
---
<scm plan> [TMP]/scm/1001/pharos_scm_plan.json
model      : 1001.mod
out dir    : scm/1001
direction  : forward -> backward
forward    : alpha 0.05
backward   : alpha 0.001
on failure : retry up to 3x from the previous attempt's estimates, jittered 5%
cov step   : off
forward fit: re-fit the forward model with the cov step on
final fit  : re-fit the final model with the cov step on
candidates :
  name         theta     type          initial  FIXED          bounds
  WT_CL        THETA(4)  continuous        0.1      0        (0, INF)
  CRCL_CL      THETA(5)  continuous        1.2      1      (0.01, 10)
  WT_V         THETA(6)  continuous        0.1      0       (-INF, 2)
             (initial: the effect's initial estimate the first time it is tested; FIXED: what it is fixed at when held out)
             (bounds: the $THETA bounds the effect is estimated under while it is in the model)
max models : 13 (incl. reference fit, excl. retries)
warning: THETA(5) [CRCL_CL] is fixed at 0 in the initial model but fixed = 1 in the config; generated models hold the effect out at 1
warning: cov_step is off: the initial model's $COVARIANCE record will be removed from the round models
