components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__plan_text_cov_on.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
assertion_line: 322
expression: text
---
<scm plan> [TMP]/scm/1001/plan.json
model      : 1001.mod
out dir    : scm/1001
direction  : forward -> backward
forward    : alpha 0.05
backward   : alpha 0.001
on failure : retry up to 3x from the previous attempt's estimates
cov step   : on
final fit  : re-fit the final model with the cov step on
candidates :
  name         theta      initial  FIXED
  WT_CL        THETA(4)       0.1      0
  CRCL_CL      THETA(5)       0.1      0
  WT_V         THETA(6)       0.1      0
             (initial: the effect's initial estimate the first time it is tested; FIXED: what it is fixed at when held out)
max models : 13 (incl. reference fit, excl. retries)
